--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <div class="container-fluid bg-body-tertiary text-center">
     <div class="container text-center">
         <div class="row justify-content-center p-2">
-            <div class="col-auto"><h5 class="social-phone">+66 433 23432</h5></div>
-            <div class="col-auto"><a href="https://wa.me/6643323432"><img src="/assets/whatsapp.svg" alt="Whatsapp"
+            <div class="col-auto"><h5 class="social-phone">+62 812-6688-3132</h5></div>
+            <div class="col-auto"><a href="https://wa.me/6281266883132"><img src="/assets/whatsapp.svg" alt="Whatsapp"
                                                                           class="social-icon"></a>
             </div>
             <div class="col-auto"><a href="#"><img src="/assets/facebook.svg" alt="Facebook" class="social-icon"></a>
@@ -309,7 +309,7 @@
     </div>
 </div>
 
-<a href="https://wa.me/6643323432?text=Hello,+I+am+interested+in+bali+childcare."
+<a href="https://wa.me/6281266883132?text=Hello,+I+am+interested+in+bali+childcare."
    class="float" target="_blank">
     <img src="/assets/whatsapp-white.svg" alt="Whatsapp" class="my-float">
 </a>
