--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <h5 class="card-title">Lets talk!</h5>
 
                     <p>Contact me for a free introductory session and lets get to know each other. The first step is to
-                        talk so I can understand your needs and how I can help you live you best life in bali!</p>
+                        talk so I can understand your needs and how I can help you live your best life in Bali!</p>
 
                     <div class="row p-1">
                         <div class="col-auto pe-2 ps-0"><img src="/assets/telephone.svg" alt="Telephone"
