Update reviews and prices

--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
                     <!--                        Featured-->
                     <!--                    </div>-->
                     <div class="card-body">
-                        <h5 class="card-title">In home child care</h5>
-                        <p class="card-text">I will travel to your home and provide care for your children there.</p>
+                        <h5 class="card-title">Care for a single child</h5>
+                        <p class="card-text">I will travel to your location and provide care for your child.</p>
                         <a href="#contact" class="btn btn-primary">Book now</a>
                     </div>
                     <div class="card-footer text-body-secondary">
-                        100,000 IDR per hour, 3 hour minimum.
+                        70,000 IDR per hour + travel expenses, 4 hour minimum.
                     </div>
                 </div>
             </div>
@@ -135,13 +135,12 @@
                     <!--                        Featured-->
                     <!--                    </div>-->
                     <div class="card-body">
-                        <h5 class="card-title">Trips and activities</h5>
-                        <p class="card-text">I will plan a fun activity to take your children to one of the beautiful
-                            locations of Bali.</p>
+                        <h5 class="card-title">Care for two to three children</h5>
+                        <p class="card-text">I will travel to your location and provide care for your children.</p>
                         <a href="#contact" class="btn btn-primary">Book now</a>
                     </div>
                     <div class="card-footer text-body-secondary">
-                        100,000 IDR per hour, 3 hour minimum. Plus activity fees.
+                        100,000 IDR per hour, + travel expenses, 4 hour minimum.
                     </div>
                 </div>
             </div>
@@ -151,13 +150,13 @@
                     <!--                        Featured-->
                     <!--                    </div>-->
                     <div class="card-body">
-                        <h5 class="card-title">Group play</h5>
-                        <p class="card-text">I will accompany your children to a group play facility in Bali and help
-                            them engage with other children.</p>
+                        <h5 class="card-title">Activities</h5>
+                        <p class="card-text">I can plan a fun activity to take your child to one of the beautiful locations of Bali.</p>
+                        <p class="card-text">I can accompany your child to a group play facility in Bali and help them engage with other children.</p>
                         <a href="#contact" class="btn btn-primary">Book now</a>
                     </div>
                     <div class="card-footer text-body-secondary">
-                        100,000 IDR per hour, 3 hour minimum. Plus activity fees.
+                        Base price + activity costs.
                     </div>
                 </div>
             </div>
@@ -183,10 +182,8 @@
             <div class="col-lg-3 mb-5">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">My child still asks, "Mom, when is Henny coming to play?", and it
-                            has been
-                            six months since we left Bali!</p>
-                        <footer class="blockquote-footer">Jillian Helgian</footer>
+                        <p class="card-text">Henny is Kind, fun, took initiative, and had enough energy to tire out our very active 3 and 5 year old boys. She was confident in the pool with them and was flexible with what they wanted to do. Honestly, just the best! we'll miss her smiling face until we come back to Bali again!</p>
+                        <footer class="blockquote-footer">Claire Kirby</footer>
                     </div>
                 </div>
             </div>
