--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="col-auto"><a href="https://wa.me/6281266883132"><img src="/assets/whatsapp.svg" alt="Whatsapp"
                                                                           class="social-icon"></a>
             </div>
-            <div class="col-auto"><a href="#"><img src="/assets/facebook.svg" alt="Facebook" class="social-icon"></a>
-            </div>
-            <div class="col-auto"><a href="#"><img src="/assets/instagram.svg" alt="Instagram" class="social-icon"></a>
-            </div>
+<!--            <div class="col-auto"><a href="#"><img src="/assets/facebook.svg" alt="Facebook" class="social-icon"></a>-->
+<!--            </div>-->
+<!--            <div class="col-auto"><a href="#"><img src="/assets/instagram.svg" alt="Instagram" class="social-icon"></a>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
@@ -242,29 +242,29 @@
                         <div class="col-auto pe-0 ps-0"><p>whatsapp: <b>+66 433 23432</b></p></div>
                     </div>
 
-                    <div class="row p-1">
-                        <div class="col-auto pe-2 ps-0"><img src="/assets/envelope.svg" alt="Email" class="social-icon">
-                        </div>
-                        <div class="col-auto pe-0 ps-0"><p>email: <span class="block-spam"
-                                                                        aria-hidden="true">NO</span><b>henny@
-                            <!-- sdfjsdhfkjypcs --> sunshinesmiles.com</b></p></div>
-                    </div>
+<!--                    <div class="row p-1">-->
+<!--                        <div class="col-auto pe-2 ps-0"><img src="/assets/envelope.svg" alt="Email" class="social-icon">-->
+<!--                        </div>-->
+<!--                        <div class="col-auto pe-0 ps-0"><p>email: <span class="block-spam"-->
+<!--                                                                        aria-hidden="true">NO</span><b>henny@-->
+<!--                            &lt;!&ndash; sdfjsdhfkjypcs &ndash;&gt; sunshinesmiles.com</b></p></div>-->
+<!--                    </div>-->
 
-                    <div class="row p-1">
-                        <div class="col-auto pe-2 ps-0"><img src="/assets/instagram.svg" alt="Instagram"
-                                                             class="social-icon"></div>
-                        <div class="col-auto pe-0 ps-0"><p>instagram: <span class="block-spam"
-                                                                            aria-hidden="true">NO</span><b>@sunshinesmiles</b>
-                        </p></div>
-                    </div>
+<!--                    <div class="row p-1">-->
+<!--                        <div class="col-auto pe-2 ps-0"><img src="/assets/instagram.svg" alt="Instagram"-->
+<!--                                                             class="social-icon"></div>-->
+<!--                        <div class="col-auto pe-0 ps-0"><p>instagram: <span class="block-spam"-->
+<!--                                                                            aria-hidden="true">NO</span><b>@sunshinesmiles</b>-->
+<!--                        </p></div>-->
+<!--                    </div>-->
 
-                    <div class="row p-1">
-                        <div class="col-auto pe-2 ps-0"><img src="/assets/facebook.svg" alt="Facebook"
-                                                             class="social-icon"></div>
-                        <div class="col-auto pe-0 ps-0"><p>facebook: <span class="block-spam"
-                                                                           aria-hidden="true">NO</span><b>https://www.facebook.com/sunshinesmiles/</b>
-                        </p></div>
-                    </div>
+<!--                    <div class="row p-1">-->
+<!--                        <div class="col-auto pe-2 ps-0"><img src="/assets/facebook.svg" alt="Facebook"-->
+<!--                                                             class="social-icon"></div>-->
+<!--                        <div class="col-auto pe-0 ps-0"><p>facebook: <span class="block-spam"-->
+<!--                                                                           aria-hidden="true">NO</span><b>https://www.facebook.com/sunshinesmiles/</b>-->
+<!--                        </p></div>-->
+<!--                    </div>-->
 
 
                     <div class="row p-1">
