--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                         <div class="col-auto pe-2 ps-0"><img src="/assets/whatsapp.svg" alt="Whatsapp"
                                                              class="social-icon"></div>
                         <div class="col-auto pe-0 ps-0"><p>whatsapp: <b>+66 433 23432</b></p></div>
+                        <div class="col-auto pe-0 ps-2"><a href="https://wa.me/6281266883132?text=Hello,+I+am+interested+in+bali+childcare.">Send me a message!</a></div>
                     </div>
 
 <!--                    <div class="row p-1">-->
