--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="col-auto"><a href="https://wa.me/6281266883132"><img src="/assets/whatsapp.svg" alt="Whatsapp"
                                                                           class="social-icon"></a>
             </div>
-<!--            <div class="col-auto"><a href="#"><img src="/assets/facebook.svg" alt="Facebook" class="social-icon"></a>-->
-<!--            </div>-->
-<!--            <div class="col-auto"><a href="#"><img src="/assets/instagram.svg" alt="Instagram" class="social-icon"></a>-->
-<!--            </div>-->
+            <div class="col-auto"><a href="https://facebook.com/sunshinesmileschildcare"><img src="/assets/facebook.svg" alt="Facebook" class="social-icon"></a>
+            </div>
+            <div class="col-auto"><a href="https://www.instagram.com/sunshinesmileschildcare/"><img src="/assets/instagram.svg" alt="Instagram" class="social-icon"></a>
+            </div>
         </div>
     </div>
 </div>
@@ -233,13 +233,13 @@
                     <div class="row p-1">
                         <div class="col-auto pe-2 ps-0"><img src="/assets/telephone.svg" alt="Telephone"
                                                              class="social-icon"></div>
-                        <div class="col-auto pe-0 ps-0"><p>phone: <b>+66 433 23432</b></p></div>
+                        <div class="col-auto pe-0 ps-0"><p>phone: <b>+66 812-6688-3132</b></p></div>
                     </div>
 
                     <div class="row p-1">
                         <div class="col-auto pe-2 ps-0"><img src="/assets/whatsapp.svg" alt="Whatsapp"
                                                              class="social-icon"></div>
-                        <div class="col-auto pe-0 ps-0"><p>whatsapp: <b>+66 433 23432</b></p></div>
+                        <div class="col-auto pe-0 ps-0"><p>whatsapp: <b>+66 812-6688-3132</b></p></div>
                         <div class="col-auto pe-0 ps-2"><a href="https://wa.me/6281266883132?text=Hello,+I+am+interested+in+bali+childcare.">Send me a message!</a></div>
                     </div>
 
@@ -251,21 +251,21 @@
 <!--                            &lt;!&ndash; sdfjsdhfkjypcs &ndash;&gt; sunshinesmiles.com</b></p></div>-->
 <!--                    </div>-->
 
-<!--                    <div class="row p-1">-->
-<!--                        <div class="col-auto pe-2 ps-0"><img src="/assets/instagram.svg" alt="Instagram"-->
-<!--                                                             class="social-icon"></div>-->
-<!--                        <div class="col-auto pe-0 ps-0"><p>instagram: <span class="block-spam"-->
-<!--                                                                            aria-hidden="true">NO</span><b>@sunshinesmiles</b>-->
-<!--                        </p></div>-->
-<!--                    </div>-->
+                    <div class="row p-1">
+                        <div class="col-auto pe-2 ps-0"><img src="/assets/instagram.svg" alt="Instagram"
+                                                             class="social-icon"></div>
+                        <div class="col-auto pe-0 ps-0"><p>instagram: <span class="block-spam"
+                                                                           aria-hidden="true">NO</span><a href="https://www.instagram.com/sunshinesmileschildcare">Connect on instagram!</a>
+                        </p></div>
+                    </div>
 
-<!--                    <div class="row p-1">-->
-<!--                        <div class="col-auto pe-2 ps-0"><img src="/assets/facebook.svg" alt="Facebook"-->
-<!--                                                             class="social-icon"></div>-->
-<!--                        <div class="col-auto pe-0 ps-0"><p>facebook: <span class="block-spam"-->
-<!--                                                                           aria-hidden="true">NO</span><b>https://www.facebook.com/sunshinesmiles/</b>-->
-<!--                        </p></div>-->
-<!--                    </div>-->
+                    <div class="row p-1">
+                        <div class="col-auto pe-2 ps-0"><img src="/assets/facebook.svg" alt="Facebook"
+                                                             class="social-icon"></div>
+                        <div class="col-auto pe-0 ps-0"><p>facebook: <span class="block-spam"
+                                                                           aria-hidden="true">NO</span><a href="https://facebook.com/sunshinesmileschildcare">Connect on facebook!</a>
+                        </p></div>
+                    </div>
 
 
                     <div class="row p-1">
