--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <a href="#contact" class="btn btn-primary">Book now</a>
                     </div>
                     <div class="card-footer text-body-secondary">
-                        70,000 IDR per hour + travel expenses, 4 hour minimum.
+                        70,000 IDR per hour + travel expenses, 5 hour minimum.
                     </div>
                 </div>
             </div>
@@ -135,12 +135,27 @@
                     <!--                        Featured-->
                     <!--                    </div>-->
                     <div class="card-body">
-                        <h5 class="card-title">Care for two to three children</h5>
+                        <h5 class="card-title">Care for two children</h5>
                         <p class="card-text">I will travel to your location and provide care for your children.</p>
                         <a href="#contact" class="btn btn-primary">Book now</a>
                     </div>
                     <div class="card-footer text-body-secondary">
-                        100,000 IDR per hour, + travel expenses, 4 hour minimum.
+                        100,000 IDR per hour, + travel expenses, 5 hour minimum.
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 mb-5">
+                <div class="card text-center">
+                    <!--                    <div class="card-header">-->
+                    <!--                        Featured-->
+                    <!--                    </div>-->
+                    <div class="card-body">
+                        <h5 class="card-title">Care for three children</h5>
+                        <p class="card-text">I will travel to your location and provide care for your children.</p>
+                        <a href="#contact" class="btn btn-primary">Book now</a>
+                    </div>
+                    <div class="card-footer text-body-secondary">
+                        120,000 IDR per hour, + travel expenses, 5 hour minimum.
                     </div>
                 </div>
             </div>
