adding seo pages

--- a/index.html
+++ b/index.html
@@ -20,21 +20,28 @@
             <div class="col-md-auto"><a href="#contact" class="nav-link"><h4>Contact</h4></a></div>
         </div>
         <div class="row justify-content-center">
-            <h6 class="sub-title">The best childcare, nanny, babysitting services in Bali</h6>
+            <h6 class="sub-title pb-2">The best childcare, nanny, babysitting services in Bali</h6>
         </div>
     </div>
 </div>
 
 <div class="container-fluid bg-body-tertiary text-center">
     <div class="container text-center">
-        <div class="row justify-content-center p-2">
+        <div class="row justify-content-center pb-2 gy-2">
             <div class="col-auto"><h5 class="social-phone">+62 812-6688-3132</h5></div>
-            <div class="col-auto"><a href="https://wa.me/6281266883132"><img src="/assets/whatsapp.svg" alt="Whatsapp"
-                                                                          class="social-icon"></a>
-            </div>
-            <div class="col-auto"><a href="https://facebook.com/sunshinesmileschildcare"><img src="/assets/facebook.svg" alt="Facebook" class="social-icon"></a>
-            </div>
-            <div class="col-auto"><a href="https://www.instagram.com/sunshinesmileschildcare/"><img src="/assets/instagram.svg" alt="Instagram" class="social-icon"></a>
+            <div class="col-auto">
+                <div class="row">
+                    <div class="col"><a href="https://wa.me/6281266883132"><img src="/assets/whatsapp.svg"
+                                                                                alt="Whatsapp"
+                                                                                class="social-icon"></a>
+                    </div>
+                    <div class="col"><a href="https://facebook.com/sunshinesmileschildcare"><img
+                            src="/assets/facebook.svg" alt="Facebook" class="social-icon"></a>
+                    </div>
+                    <div class="col"><a href="https://www.instagram.com/sunshinesmileschildcare/"><img
+                            src="/assets/instagram.svg" alt="Instagram" class="social-icon"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -59,7 +66,14 @@
         <div class="col-auto">
 
             <div class="alert alert-light" role="alert">
-                Contact me to book my services! <a href="#contact" class="btn btn-primary ms-3">Book now</a>
+                <div class="container text-center">
+                    <div class="row justify-content-center">
+                        <div class="col-auto p-2">Contact me to book my services!</div>
+                        <div class="col-auto">
+                            <a href="#contact" class="btn btn-primary">Book now</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -166,8 +180,10 @@
                     <!--                    </div>-->
                     <div class="card-body">
                         <h5 class="card-title">Activities</h5>
-                        <p class="card-text">I can plan a fun activity to take your child to one of the beautiful locations of Bali.</p>
-                        <p class="card-text">I can accompany your child to a group play facility in Bali and help them engage with other children.</p>
+                        <p class="card-text">I can plan a fun activity to take your child to one of the beautiful
+                            locations of Bali.</p>
+                        <p class="card-text">I can accompany your child to a group play facility in Bali and help them
+                            engage with other children.</p>
                         <a href="#contact" class="btn btn-primary">Book now</a>
                     </div>
                     <div class="card-footer text-body-secondary">
@@ -197,7 +213,10 @@
             <div class="col-lg-3 mb-5">
                 <div class="card">
                     <div class="card-body">
-                        <p class="card-text">Henny is Kind, fun, took initiative, and had enough energy to tire out our very active 3 and 5 year old boys. She was confident in the pool with them and was flexible with what they wanted to do. Honestly, just the best! we'll miss her smiling face until we come back to Bali again!</p>
+                        <p class="card-text">Henny is Kind, fun, took initiative, and had enough energy to tire out our
+                            very active 3 and 5 year old boys. She was confident in the pool with them and was flexible
+                            with what they wanted to do. Honestly, just the best! we'll miss her smiling face until we
+                            come back to Bali again!</p>
                         <footer class="blockquote-footer">Claire Kirby</footer>
                     </div>
                 </div>
@@ -255,22 +274,25 @@
                         <div class="col-auto pe-2 ps-0"><img src="/assets/whatsapp.svg" alt="Whatsapp"
                                                              class="social-icon"></div>
                         <div class="col-auto pe-0 ps-0"><p>whatsapp: <b>+66 812-6688-3132</b></p></div>
-                        <div class="col-auto pe-0 ps-2"><a href="https://wa.me/6281266883132?text=Hello,+I+am+interested+in+bali+childcare.">Send me a message!</a></div>
+                        <div class="col-auto pe-0 ps-2"><a
+                                href="https://wa.me/6281266883132?text=Hello,+I+am+interested+in+bali+childcare.">Send
+                            me a message!</a></div>
                     </div>
 
-<!--                    <div class="row p-1">-->
-<!--                        <div class="col-auto pe-2 ps-0"><img src="/assets/envelope.svg" alt="Email" class="social-icon">-->
-<!--                        </div>-->
-<!--                        <div class="col-auto pe-0 ps-0"><p>email: <span class="block-spam"-->
-<!--                                                                        aria-hidden="true">NO</span><b>henny@-->
-<!--                            &lt;!&ndash; sdfjsdhfkjypcs &ndash;&gt; sunshinesmiles.com</b></p></div>-->
-<!--                    </div>-->
+                    <!--                    <div class="row p-1">-->
+                    <!--                        <div class="col-auto pe-2 ps-0"><img src="/assets/envelope.svg" alt="Email" class="social-icon">-->
+                    <!--                        </div>-->
+                    <!--                        <div class="col-auto pe-0 ps-0"><p>email: <span class="block-spam"-->
+                    <!--                                                                        aria-hidden="true">NO</span><b>henny@-->
+                    <!--                            &lt;!&ndash; sdfjsdhfkjypcs &ndash;&gt; sunshinesmiles.com</b></p></div>-->
+                    <!--                    </div>-->
 
                     <div class="row p-1">
                         <div class="col-auto pe-2 ps-0"><img src="/assets/instagram.svg" alt="Instagram"
                                                              class="social-icon"></div>
                         <div class="col-auto pe-0 ps-0"><p>instagram: <span class="block-spam"
-                                                                           aria-hidden="true">NO</span><a href="https://www.instagram.com/sunshinesmileschildcare">Connect on instagram!</a>
+                                                                            aria-hidden="true">NO</span><a
+                                href="https://www.instagram.com/sunshinesmileschildcare">Connect on instagram!</a>
                         </p></div>
                     </div>
 
@@ -278,7 +300,8 @@
                         <div class="col-auto pe-2 ps-0"><img src="/assets/facebook.svg" alt="Facebook"
                                                              class="social-icon"></div>
                         <div class="col-auto pe-0 ps-0"><p>facebook: <span class="block-spam"
-                                                                           aria-hidden="true">NO</span><a href="https://facebook.com/sunshinesmileschildcare">Connect on facebook!</a>
+                                                                           aria-hidden="true">NO</span><a
+                                href="https://facebook.com/sunshinesmileschildcare">Connect on facebook!</a>
                         </p></div>
                     </div>
 
@@ -300,24 +323,24 @@
     <div class="container text-center">
         <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
         <div class="row justify-content-center">
-            <div class="col-auto">Childcare Bali</div>
-            <div class="col-auto">Nanny Bali</div>
-            <div class="col-auto">Babysitting Bali</div>
-            <div class="col-auto">Childcare Canggu</div>
-            <div class="col-auto">Nanny Canggu</div>
-            <div class="col-auto">Babysitting Canggu</div>
-            <div class="col-auto">Childcare Ubud</div>
-            <div class="col-auto">Nanny Ubud</div>
-            <div class="col-auto">Babysitting Ubud</div>
-            <div class="col-auto">Childcare Denpasar</div>
-            <div class="col-auto">Nanny Denpasar</div>
-            <div class="col-auto">Babysitting Denpasar</div>
-            <div class="col-auto">Childcare Seminyak</div>
-            <div class="col-auto">Nanny Seminyak</div>
-            <div class="col-auto">Babysitting Seminyak</div>
-            <div class="col-auto">Childcare Uluwatu</div>
-            <div class="col-auto">Nanny Uluwatu</div>
-            <div class="col-auto">Babysitting Uluwatu</div>
+            <div class="col-auto"><a href="bali-child-care.html">Bali Child Care</a></div>
+            <div class="col-auto"><a href="bali-nanny.html">Bali Nanny</a></div>
+            <div class="col-auto"><a href="bali-baby-sitting.html">Bali Baby Sitting</a></div>
+            <div class="col-auto"><a href="canggu-child-care.html">Canggu Child Care</a></div>
+            <div class="col-auto"><a href="canggu-nanny.html">Canggu Nanny</a></div>
+            <div class="col-auto"><a href="canggu-baby-sitting.html">Canggu Baby Sitting</a></div>
+            <div class="col-auto"><a href="ubud-child-care.html">Ubud Child Care</a></div>
+            <div class="col-auto"><a href="ubud-nanny.html">Ubud Nanny</a></div>
+            <div class="col-auto"><a href="ubud-baby-sitting.html">Ubud Baby Sitting</a></div>
+            <div class="col-auto"><a href="denpasar-child-care.html">Denpasar Child Care</a></div>
+            <div class="col-auto"><a href="denpasar-nanny.html">Denpasar Nanny</a></div>
+            <div class="col-auto"><a href="denpasar-baby-sitting.html">Denpasar Baby Sitting</a></div>
+            <div class="col-auto"><a href="seminyak-child-care.html">Seminyak Child Care</a></div>
+            <div class="col-auto"><a href="seminyak-nanny.html">Seminyak Nanny</a></div>
+            <div class="col-auto"><a href="seminyak-baby-sitting.html">Seminyak Baby Sitting</a></div>
+            <div class="col-auto"><a href="uluwatu-child-care.html">Uluwatu Child Care</a></div>
+            <div class="col-auto"><a href="uluwatu-nanny.html">Uluwatu Nanny</a></div>
+            <div class="col-auto"><a href="uluwatu-baby-sitting.html">Uluwatu Baby Sitting</a></div>
         </div>
     </div>
 </div>
